# Occult.AI

./: .gitignore  README.md  pyproject.toml
Chroma_db/175bc7ca-6c1e-4132-b8b9-c8b3dd4e62cd/: index_metadata.pickle
Chroma_db/862acda4-ad78-49d8-ae83-c239d98074d6/: index_metadata.pickle
backend/: frontend.py  main.py  natural_lang_toolkit.py
backend/Chroma_db/cdccc91e-0970-4cf9-bc72-6f83b1287f26/: index_metadata.pickle
backend/Common/Database/: database.py  init.sql  models.py  vectordb.py
backend/Common/Services/: author_services.py  book_services.py  queryServices.py  query_services.py  userServices.py  user_services.py
backend/Middleware/: auth.py  logger.py  security.py
backend/Routes/: authors.py  books.py  query.py  users.py
backend/Schemas/: author.py  book.py  user.py
frontend/: index.html  index.js  package-lock.json  package.json  style.css
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/Assets/: index.ts
frontend/src/Components/AdminBook/: AdminBook.module.css  AdminBook.tsx
frontend/src/Components/AdminUser/: AdminUser.module.css  AdminUser.tsx
frontend/src/Components/App/: App.tsx
frontend/src/Components/BookShelf/: BookShelf.module.css  BookShelf.tsx
frontend/src/Components/Chatbox/: Chatbox.module.css  Chatbox.tsx
frontend/src/Components/Header/: Header.css  Header.module.css  Header.tsx
frontend/src/Components/LoginFront/: LoginFront.module.css  LoginFront.tsx
frontend/src/Components/Logo/: Logo.module.css  Logo.tsx
frontend/src/Components/SearchBar/: SearchBar.module.css  SearchBar.tsx
frontend/src/Pages/Admin/: Admin.module.css  Admin.tsx
frontend/src/Pages/Home/: Home.module.css  Home.tsx
frontend/src/Pages/Login/: Login.tsx
