[tool.poetry]
name = "occult-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
sqlalchemy-orm = "^1.2.10"
pandas = "^2.2.2"
nltk = "^3.8.1"
streamlit = "^1.36.0"
transformers = "^4.42.4"
torch = "^2.3.1"
accelerate = "^0.32.1"
langchain = "^0.2.10"
langchain-ollama = "^0.1.0"
langchain-chroma = "^0.1.2"
langchain-community = "^0.2.10"
langchain-text-splitters = "^0.2.2"
protobuf = "==3.20.*"
sentence-transformers = "^3.0.1"
chromadb = "^0.5.5"
langgraph = "^0.1.14"
langsmith = "^0.1.93"
langchain-anthropic = "^0.1.20"
ipython = "^8.26.0"
grandalf = "^0.8"
nanoid = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
